completed user assistance basic flow for one user with state management

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
+      <div id="stop-suppot-btn">
+        Stop Support
+      </div>
       <input class="inputMessage" placeholder="Type here..."/>
     </li>
     <li class="login page">
