added multi-user support

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     </nav>
     <div class="columns">
       <div class="column is-three-quarters">
-        <div class="chatView">
+        <div class="messages">
 
         </div>
       </div>
       <div class="column">
-        <div class="usersView">
+        <div class="users">
     
         </div>
       </div>
@@ -30,10 +30,10 @@
     <footer>
       <div class="field is-grouped">
         <p class="control is-expanded">
-          <input class="input input-height" type="text" placeholder="Type your message here....">
+          <input class="input input-height" id="send-message-textInput" type="text" placeholder="Type your message here...." disabled>
         </p>
         <p class="control">
-          <a class="button is-info is-large" id="send-message-btn">
+          <a class="button is-info is-large" id="send-message-btn" disabled>
             SEND
           </a>
         </p>
