improve front end user display

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <span class="title">Messenger Support</span>
       </div>
     </nav>
-    <div class="columns">
+    <div class="columns is-gapless">
       <div class="column is-three-quarters">
         <div class="messages">
 
